--- a/dpex/templates/landingPage.html
+++ b/dpex/templates/landingPage.html
@@ -1,22 +1,15 @@
 {{define "Q"}}
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
-    <link rel="stylesheet " href="/assets/grid.css ">
-    <link rel="stylesheet " href="/assets/nav.css ">
-
+    <link rel="stylesheet " href="/css/grid.css ">
+    <link rel="stylesheet " href="/css/nav.css ">
     <title>FDP Landing page</title>
-
-
 <script type="appplication/ld+json">
 {{.}}
 </script>
-
-
 </head>
-
 <body>
     <div class="grid ">
         <div class="title ">
@@ -25,23 +18,23 @@
                     <a href="/" class="navLinks">Home</a>
                 </div>
                 <div class="m2">
-                    <a href="/html/about.html" class="navLinks">About</a>
+                    
                 </div>
                 <div class="logo">
                 </div>
                 <div class="m3">
-                    <a target="_blank" href="https://github.com/earthcubearchitecture-project418" class="navLinks">GitHub</a>
+                     
                 </div>
                 <div class="m4">
-                    <a target="_blank" href="/voc/" class="navLinks">Vocabularies</a>
+                   
                 </div>
             </nav>
         </div>
-        <div class="header">FDP2LP landing page:  RESID</div>
+        <div class="header">Frictionless to Landing Page demo:  TEST</div>
         <div class="sidebar">
 
-         This is a simple test of reading schema.org items inside a frictionless data package and 
-         using that to generate this landing page.  
+        This is a demo.  The material to the left is generated 
+        from the Frictionless Data Package
 
         </div>
         <div class="content">
@@ -52,7 +45,8 @@
                     </p>
                
                 <p style="margin-top:20px">
-                   Use web components to display elements on the LP generated from the schema.org JSON-LD
+                   Use web components to display elements on the
+                    LP generated from the schema.org JSON-LD
                 </p>
                
             </p>
@@ -64,6 +58,5 @@
         </div>
     </div>
 </body>
-
 </html>
 {{end}}
